# LLMiddler

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  test_lm_studio_stream.py
gateway_ia/: __main__.py  app.py  config.py  models.py  store.py
gateway_ia/routers/: proxy.py  ui.py
gateway_ia/services/: proxy_service.py
gateway_ia/templates/: base.html  session_detail.html  session_list.html
