[project]
name = "gateway-ia"
version = "0.1.0"
description = "Transparent HTTP proxy for AI inference backends with session tracing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "requests"
]

[project.scripts]
gateway-ia = "gateway_ia.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
